src/objects/CS_Content_Access__c.object
<CustomObject>
    <fields>
        <fullName>CS_Content__c</fullName>
        <label>Content</label>
        <referenceTo>CS_Community_Content__c</referenceTo>
        <relationshipLabel>Content Access</relationshipLabel>
        <relationshipName>Content_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CS_Profile__c</fullName>
        <label>Profile</label>
        <picklist>
            <picklistValues>
                <fullName>GW Partner Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Customer Community Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Customer Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Support/Enablement – Operations/ Lead/Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Content Access</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Content Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>